Fix jokes overflow

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,4 +1,8 @@
 
+body {
+    background-color: #b8e0da;
+}
+
 .input {
     width: 80%;
     padding: 10px;
@@ -40,17 +44,17 @@
 }
 
 .outerContainer {
-    position: absolute;
+    /* position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     background-color: #b8e0da;
-    flex-direction: column;
-    padding: 20px
+    /* flex-direction: column;
+    padding: 20px */
 }
 
 .select { 
